kubernetes/apps/media/immich/app/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: immich
  annotations:
    glance/name: "Immich"
    glance/show: "true"
    glance/icon: "https://cdn.jsdelivr.net/gh/homarr-labs/dashboard-icons/png/immich.png"
    glance/id: "Media"
spec:
  hostnames: ["photos.${SECRET_DOMAIN}"]
  parentRefs:
    - name: external
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: immich-server
          namespace: media
          port: 2283
